# PoemsLikeThisOne

./: README.md  app.py  embed_poems.py  fetch_poetrydb.py  process_poems.py  process_posts.py  pyproject.toml  requirements.txt
