[project]
name = "poemslikethisone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.20",
    "urllib3>=1.25",
    "sentence-transformers>=2.2.2",
    "numpy>=1.21",
    "tqdm>=4.0",
    "streamlit>=1.28.0",
    "hf-xet>=1.2.0",
    "instaloader>=4.15",
    "pytesseract>=0.3.13",
    "spacy>=3.8.11",
    "opencv-python>=4.11.0.86",
]
